--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "changelogUrl": "https://github.com/gerolds/Readymade.Databinding/CHANGELOG.md",
   "licensesUrl": "https://github.com/gerolds/Readymade.Databinding/LICENSE",
   "dependencies": {
+    "com.anglebracket.readymade-utils": "0.1.0"
   },
   "keywords": [
     "Databinding"
